# ai-council

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
examples/: code_review.py  content_moderation.py  domain_valuation.py
src/ai_council/: __init__.py  council.py  decision.py  store.py  voter.py
tests/: test_council.py  test_decision.py  test_voter.py
