[project]
name = "ai-council"
version = "0.1.0"
description = "Multi-voter consensus framework for LLM and heuristic decisions — composable Voters, weighted votes, optional veto, persistent meeting log."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "lfzds4399-cpu", email = "272075207+lfzds4399-cpu@users.noreply.github.com" }]
license = { text = "MIT" }
keywords = ["consensus", "voting", "llm", "ensemble", "decision", "moderation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
# Zero runtime dependencies — voters bring their own LLM client / DB driver.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/lfzds4399-cpu/ai-council"
Issues = "https://github.com/lfzds4399-cpu/ai-council/issues"
Changelog = "https://github.com/lfzds4399-cpu/ai-council/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "S", "ASYNC"]
# E501 long lines (length already capped); S101 assert (idiomatic in tests)
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
"examples/*" = ["T201"]  # print() is fine in runnable examples

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "examples/"]
